[package]
name = "json2env"
version = "0.3.0"
edition = "2021"
authors = ["Marcello Lamonaca <marcello@lamonaca.eu>"]
description = "JSON to Env Var converter"
repository = "https://github.com/m-lamonaca/json-to-env"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive", "color"] }
serde_json = "1.0.97"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
