[package]
name = "json2env"
version = "0.4.0"
edition = "2024"
authors = ["Marcello Lamonaca <marcello@lamonaca.eu>"]
description = "JSON to Env Var converter"
repository = "https://github.com/m-lamonaca/json-to-env"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
serde_json = "1.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
